Fix and re-enable GpuPreferencesUtilTest.EncodeDecode test.

BUG=799458

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Ib2898c97168b164c718dcc3c0303950c4c271659
Reviewed-on: https://chromium-review.googlesource.com/852639
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Victor Miura <vmiura@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535944}
Former-commit-id: 015cbc255a73cefb26c2b9fbe3102f4ac26eece1